[package]
edition = "2024"
name = "hass-volume-screen"
version = "0.0.1"

[dependencies]
defmt = "0.3.100"
embassy-net = { version = "0.6.0", features = [
    "defmt",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
    "dhcpv4-hostname",
] }
rust-mqtt = { version = "0.3.0", default-features = false, features = [
    "defmt",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
    "defmt",
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "custom-halt",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
    "defmt",
    "esp32c6",
    "unstable",
] }
esp-println = { version = "0.13.1", features = [
    "defmt-espflash",
    "esp32c6",
    "log",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["defmt", "nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
esp-wifi = { version = "0.13.0", features = [
    "builtin-scheduler",
    "defmt",
    "esp-alloc",
    "esp32c6",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
u8g2-fonts = { version = "0.6.0", features = ["embedded_graphics_textstyle"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", features = ["heapless", "defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", branch = "main", features = [
    "esp32c6",
    "defmt",
] }
smart-leds = "0.4.0"
embedded-devices = { version = "0.10.2", features = ["defmt", "sensirion-scd40"] }
mipidsi = "0.9.0"
embedded-graphics-framebuf = "0.5.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
